[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Entities/Shops/FuelShop/FuelShop.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 164, 164 )

[node name="FuelShop" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Building" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ButtonMarker" type="Sprite" parent="."]
visible = false
rotation = 0.785398
scale = Vector2( 0.5, 0.5 )
z_index = 2
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="CanvasLayer/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.258824, 0.160784, 0.160784, 1 )

[node name="FuelTank" type="ProgressBar" parent="CanvasLayer/UI"]
margin_left = 111.531
margin_top = 227.0
margin_right = 372.531
margin_bottom = 289.0
percent_visible = false

[node name="FuelInfo" type="Label" parent="CanvasLayer/UI/FuelTank"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "0/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonFill" type="Button" parent="CanvasLayer/UI"]
margin_left = 113.0
margin_top = 303.0
margin_right = 372.0
margin_bottom = 362.0
text = "Fill tank"

[node name="Title" type="Label" parent="CanvasLayer/UI"]
anchor_right = 1.0
margin_top = 42.0
margin_right = -692.0
margin_bottom = 66.0
rect_scale = Vector2( 3, 3 )
text = "Pump station"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonExit" type="Button" parent="CanvasLayer/UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -88.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="CanvasLayer/UI/ButtonFill" to="." method="_on_ButtonFill_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/ButtonExit" to="." method="_on_ButtonExit_pressed"]
